Bug 659740 - Frecency update causes SQL sort warning. r=sdwilsh